# caja-de-ahorros

./: .env.template  .gitignore  .pre-commit-config.yaml  Income_Prediction_Model_Documentation.md  cleaned_ml_pipeline.txt  pyproject.toml  requirements.txt  requirements_production_pipeline.txt  setup_production_env.bat
api-service/: .env.example  Dockerfile  README.md
api-service/app/: main.py
api-service/docs/: API_REFERENCE.md  DEPLOYMENT.md
api-service/examples/: __init__.py  curl_examples.sh
api-service/tests/: test_api.py
archive/old_configs/: 01_predictions_pipeline.py  03_predictions_pipeline.py  Dockerfile  Makefile  check_model.py  docker-compose.yml  environment.yml
archive/old_docs/: 01_eda.txt  02_modeling.txt  03_voting.txt  04_train_and_performance.txt  06_left.txt  EXPLORATORY_DATA_ANALYSIS_REPORT.md  Income_Prediction_Model_Technical_Documentation.md  MODEL_DEVELOPMENT_REPORT.md  MODEL_DEVELOPMENT_REPORT_2.md  MODEL_DEVELOPMENT_REPORT_3.md  MODEL_DEVELOPMENT_REPORT_4.md  README.md
archive/old_models/: final_production_model.pkl  validation_model_backup.pkl
archive/old_notebooks/: 02_00_clean_training_nested_version_ORIGINAL.ipynb  02_01_clean_training_nested_version_log_transf.ipynb  02_02_clean_training_nested_version_boxcox_transf.ipynb
archive/old_txt_files/: DATA CLEANING AND FEATURE HOMOLOGATION STRATEGIES.txt  DATA CLEANING AND FEATURE HOMOLOGATION.txt  ULTRA_SIMPLE_CONSOLIDATION.py  diagnostic_steps.txt  features.txt  initial.dta_pipeline.txt  initial_raw_pipeline.txt  initial_row.txt  less_aggressive_winsorization.txt  model_process_with_boxcox_transform.txt  model_process_with_log_transform.txt  model_process_with_nested_cv.txt  model_process_with_nested_cv_boxcox_transform.txt  model_process_with_nested_cv_log_transform.txt  model_process_with_no_tranformations.txt  nested_cat_added.txt  nested_model_process.txt  prod_pipeline_final.txt  production_scaling_guide.txt  to_add_final_pipeline.txt
archive/tests/: __init__.py
auditory_datasets/: Augment-validation-review.md  Comprehensive Validation – Key Points.md  Core Methodology & Data Treatment.md  EDA-Veredict.md
config/: config.yml
data/production/: df_clientes_clean_final.csv  income_predictions.csv
docs/: 01_data_preprocessing_guide.md
documents/: QUICK_SETUP_GUIDE.md
documents/01_clean_process/: 01_EXPLORATORY_DATA.txt  01_clean_process.md  02_clean_process_categorical_feat.md  04_clean_process_final.md  (+10 more)
model_pred_files/: pipeline_log_20250914.txt  pipeline_log_20250916.txt
monitoring/: prometheus.yml
notebooks/: 01_data_exploration.ipynb  01_exploratory_data_analysis_real.ipynb  02_00_clean_training_nested_version_IC.ipynb  02_training_model_version_1.ipynb  03_clean_training_model_version_1.ipynb  training_model_version_0.ipynb
partner_pipeline/: README.md  SETUP_GUIDE.md  example_usage.py  income_prediction_pipeline.py  predictions_20250916_104813.json  predictions_20250916_105201.csv  predictions_20250916_105201.json  production_part1_data_cleaning.py  production_part2_model_inference.py  requirements.txt  test_pipeline.py
partner_pipeline_2/: DATA_FORMATS.md  FOLDER_ORGANIZATION.md  README.md  START_HERE.txt  example_data.csv  example_data.json  feature_combination_results.csv  income_prediction_pipeline.py  minimal_test_data.csv  predictions_20250916_120022.csv  predictions_20250916_120022.json  predictions_20250916_125223.csv  production_part1_data_cleaning.py  single_customer.csv  single_customer.json  temp_input_data.csv  test.py
production_test/: production_incremental_predictions.py  production_part2_model_inference.py  production_part3_business_formatting.py  production_pipeline_complete.py  production_pipeline_complete_test.py  simple_column_test.py  test_report.txt
sharing_package/: README.md  SHARING_GUIDE.md  START_API.bat
tests/: conftest.py
(+130 files in other folders)
